refactor: sass files

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="dist/css/app.css" />
     <!-- jQuery (for Bootstrap's JavaScript plugins)
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-
-    <!-- Bootstrap compiled and minified CSS -->
+<!-- 
+    <!-- Bootstrap compiled and minified CSS
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- Optional bootstrap theme -->
+    <!-- Optional bootstrap theme 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    
+     -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/underscore-min.js"></script>
@@ -66,6 +66,7 @@
         </div>
     </nav>
     <!--banner-->
+    
     <div class="banner one" ng-show="SearchBar" style="position:absolute;left:155px">
 
       <div class="bk l">
