style: add fx to menu

--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -59,14 +59,14 @@
   </div>
 
   <div class="barber-style-selection">
-    <div href="" class="selection-link selection-link-barber col-xs-12 col-sm-6">
+    <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
       <a href="" class="link barber-link">
         <div class="inner-block">
           Barber
         </div>
       </a>
     </div>
-    <div href="" class="selection-link selection-link-style col-xs-12 col-sm-6">
+    <div class="selection-link selection-link-style col-xs-12 col-sm-6">
       <a href="" class="link style-link">
         <div class="inner-block">
           Style
