--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -60,7 +60,7 @@
 
   <div class="barber-style-selection">
     <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
-      <a href="" class="link barber-link">
+      <a href="/#/barbers" class="link barber-link">
         <div class="inner-block">
           Barber
         </div>
@@ -73,7 +73,7 @@
         </div>
       </a>
     </div>
-    
+
   </div>
 
 
