--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="dist/css/app.css" />
     <!-- jQuery (for Bootstrap's JavaScript plugins)
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
-<!-- 
+<!--
     <!-- Bootstrap compiled and minified CSS
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- Optional bootstrap theme 
+    <!-- Optional bootstrap theme
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
      -->
     <script src="assets/js/jquery.min.js"></script>
@@ -34,7 +34,7 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand icon" href="#">
+                  <a class="navbar-brand icon" href="#/">
                   <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="115.865px" height="115.866px" viewBox="0 0 115.865 115.866" style="enable-background:new 0 0 115.865 115.866;"xml:space="preserve">
                     <g>
                       <path d="M115.86,55.23c-0.019-0.898-0.541-1.712-1.357-2.11c-0.814-0.395-1.784-0.308-2.512,0.227
@@ -57,7 +57,7 @@
                 </form>
               <div id="navbar" class="collapse navbar-collapse" >
                   <ul class="nav navbar-nav navbar-right" ng-controller='AuthController' style='float:right'>
-                          <li class='nav navbar-nav' ng-controller='MealController'>
+                          <li class='nav navbar-nav'>
                               <a ng-click="checkOut()">Checkout
                              <span class="glyphicon glyphicon-shopping-cart"></span> {{count.number}}
                               </a>
@@ -129,7 +129,7 @@
    <!--  <div id="container">
     </div> -->
 
-   
+
 
     <footer>
         <script src="bower_components/angular/angular.js"></script>
