chore: code cleanup

--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -58,23 +58,30 @@
     </a>
   </div>
 
-  <div class="barber-style-selection">
-    <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
-      <a href="/#/barbers" class="link barber-link">
-        <div class="inner-block">
-          Barber
-        </div>
-      </a>
-    </div>
-    <div class="selection-link selection-link-style col-xs-12 col-sm-6">
-      <a href="/#/hairstyles" class="link style-link">
-        <div class="inner-block">
-          Style
-        </div>
-      </a>
-    </div>
+  <div class="container" ng-controller="ratingController">
+  <div star-rating rating="starRating1" read-only="false" max-rating="5" click="click1(param)"></div>
+    <div> <span class="label label-primary">Star Rating: {{starRating1}}</span>
+   </div>
+ </div>
 
+
+ <div class="barber-style-selection">
+  <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
+    <a href="" class="link barber-link">
+      <div class="inner-block">
+        Barber
+      </div>
+    </a>
   </div>
+  <div class="selection-link selection-link-style col-xs-12 col-sm-6">
+    <a href="" class="link style-link">
+      <div class="inner-block">
+        Style
+      </div>
+    </a>
+  </div>
+
+</div>
 
 
 </div>
