add:added hairstyles profile page and hairstyles list pages, linked them to homepage.html

--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -67,7 +67,7 @@
       </a>
     </div>
     <div class="selection-link selection-link-style col-xs-12 col-sm-6">
-      <a href="" class="link style-link">
+      <a href="/#/hairstyles" class="link style-link">
         <div class="inner-block">
           Style
         </div>
