--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -60,7 +60,8 @@
 
   <div class="container" ng-controller="ratingController">
   <div star-rating rating="starRating1" read-only="false" max-rating="5" click="click1(param)"></div>
-    <div> <span class="label label-primary">Star Rating: {{starRating1}}</span>
+    <div> <span class="label label-primary">Rate This Barber {{starRating1}}</span>
+    <div> <span> Avg Rating: {{avgRating}}/5</span></div>
    </div>
  </div>
 
