fix: link between list and profile pages complete

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Foodly</title>
+    <title>Sexify</title>
     <link href='https://fonts.googleapis.com/css?family=Tangerine:700' rel='stylesheet' type='text/css'>
     <link rel="shortcut icon" href='assets/images/favicon.ico'/>
 
@@ -34,11 +34,11 @@
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand icon" href="#">
+                  <a class="navbar-brand icon" href="#/">
                     <i class="icon-mustache"></i>
                   </a>
-                  <a class="navbar-brand" href="#/meals">Today's Meals</a>
-                          <a class ='navbar-brand' href="#/addmeal">Add Meal</a>
+                  <a class="navbar-brand" href="#/meals">Barbers</a>
+                          <a class ='navbar-brand' href="#/addmeal">Add Style</a>
 
               </div>
                 <form class="navbar-form navbar-left" role="search">
@@ -68,34 +68,6 @@
           </div>
       </nav>
     </header>
-    <!--banner-->
-    <div class="banner one" ng-show="SearchBar" style="position:absolute;left:155px">
-
-      <div class="bk l">
-        <div class="arrow top"></div>
-        <div class="arrow bottom"></div>
-      </div>
-
-      <div class="skew l"></div>
-
-      <div class="main">
-      <div style="
-          font-family: serif;
-          font-variant: small-caps;
-          position: relative;
-          text-align: center;
-      ">The  marketplace  for  home-cooked  food</div>
-      </div>
-
-      <div class="skew r"></div>
-
-      <div class="bk r">
-        <div class="arrow top"></div>
-        <div class="arrow bottom"></div>
-      </div>
-
-    </div>
-
     <!-- Main content that changes based on route -->
     <div ng-view class='main-container container'></div>
 
