--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -13,18 +13,17 @@
             <p>{{meal.meals.description}}</p>
           </div>
           <div class="ratings">
-            <p class="pull-right">{{ randReviews[$index] }} review<span ng-show='randReviews[$index] !== 1'>s</span></p>
-            <p>
-              <span ng-show='randStars[$index] >= 1' class="glyphicon glyphicon-star"></span>
-              <span ng-show='randStars[$index] >= 2' class="glyphicon glyphicon-star"></span>
-              <span ng-show='randStars[$index] >= 3' class="glyphicon glyphicon-star"></span>
-              <span ng-show='randStars[$index] >= 4' class="glyphicon glyphicon-star"></span>
-              <span ng-show='randStars[$index] >= 5' class="glyphicon glyphicon-star"></span>
-            </p>
+           <div class="container" ng-controller="ratingController">
+            <div star-rating rating="starRating1" read-only="false" max-rating="5" click="click1(param)"></div>
+            <div> <span class="label label-primary">Rate This Barber</span>
+              <div> <span> Avg Rating: {{avgRating}}/5</span></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+</div>
+
 
