--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -1,14 +1,15 @@
 
 
 <!-- List of Barbers -->
-<div id='container'>
+<div class='container list-page barbers-list-page'>
   <div class="row">
     <div ng-repeat="meal in data | filter:search ">
-      <div class="col-sm-4 col-lg-4 col -md-4">
-        <div class="thumbnail">
-          <img id="meal_images" ng-src="{{meal.profile || 'http://images.realestateview.com.au/pics/406/Food-Hospitality-Elsternwick-VIC-3185-Real-Estate-photo-1-featured-9374406.jpg'}}">
+      <div class="col-sm-4 col-lg-4 col -md-4 list-element-container">
+        <div class="thumbnail list-element">
+          <div class="picture" style="background-image:url({{meal.portrait}})"></div>
+          <!-- <img id="meal_images" ng-src="{{meal.portrait}}"> -->
           <div class="caption">
-            <h4><a href="#/barbers/profile" ng-click="setId(meal._id)">{{meal._id}}</a></h4>
+            <h4><a href="#/barbers/profile" ng-click="setId(meal._id)">{{meal.name}}</a></h4>
             <button type="submit" class="btn btn-success pull-right" ng-click="orderMeal(meal)">Add to cart</button>
             <p>{{meal.meals.description}}</p>
           </div>
