add: posts ratings to mongodb, updates ratingCount

--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -14,7 +14,7 @@
           </div>
           <div class="ratings">
            <div class="container" ng-controller="ratingController">
-            <div star-rating rating="starRating1" read-only="false" max-rating="5" click="click1(param)"></div>
+            <div star-rating rating="starRating1" read-only="false" max-rating="5" click="click1(param, meal._id)"></div>
             <div> <span class="label label-primary">Rate This Barber</span>
               <div> <span> Avg Rating: {{avgRating}}/5</span></div>
             </div>
