--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -3,11 +3,10 @@
 <!-- List of Barbers -->
 <div class='container list-page barbers-list-page'>
   <div class="row">
-    <div ng-repeat="meal in data | filter:search ">
+    <div ng-repeat="meal in data | filter:search | orderBy:'-'">
       <div class="col-sm-4 col-lg-4 col -md-4 list-element-container">
         <div class="thumbnail list-element">
-          <div class="picture" style="background-image:url({{meal.portrait}})"></div>
-          <!-- <img id="meal_images" ng-src="{{meal.portrait}}"> -->
+          <a href="#/barbers/profile" ng-click="setId(meal._id)" class="picture" style="background-image:url({{meal.portrait}})"></a>
           <div class="caption">
             <h4><a href="#/barbers/profile" ng-click="setId(meal._id)">{{meal.name}}</a></h4>
             <button type="submit" class="btn btn-success pull-right" ng-click="orderMeal(meal)">Add to cart</button>
