--- a/client/app/index.html
+++ b/client/app/index.html
@@ -99,6 +99,7 @@
     <footer>
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
+        <!-- <script src="bower_components/braintree-web/dist/braintree.js"></script> -->
         <script src="assets/js/app.extra.js"></script>
         <script src="dist/js/app.concat.js"></script>
     </footer>
