--- a/client/app/barbers/barber-profile.html
+++ b/client/app/barbers/barber-profile.html
@@ -1,66 +1,67 @@
 <!-- Page Content -->
-<div class="profile-page barber-page">
-<div class="row top-block barber-top-block">
+<div class="profile-page container">
+  <div class="row main-block">
 
-  <div class="col-md-8 info-container info-barber">
-    <div class="row main-info-block main-info-barber ">
-      <div class="col-xs-6 portrait-block portrait-barber">
-        <div class="portrait" style="background-image:url({{ barberInfos.portrait }})"></div>
-      </div>
+    <div class="col-xs-12 info-container">
+      <div class="row main-info-block">
+        <div class="col-xs-12 col-sm-6 portrait-block">
+          <div class="portrait" style="background-image:url({{ barberInfos.portrait }})"></div>
+        </div>
 
-      <div class="col-xs-6 stats-block stats-barber">
-        <div class="stats">
-          <p class="name">Name : {{ barberInfos.name }}</p>
-          <p class="name">Bio : {{ barberInfos.bio }}</p>
-          <p class="name">Location : {{ barberInfos.location }}</p>
-          <p class="name">Gender : {{ barberInfos.gender }}</p>
-          <p class="name">Availability : {{ barberInfos.availability }}</p>
-          <ul class="languages">
-            <li ng-repeat="language in barberInfos.languages">
-              {{ language }}
-            </li>
-          </ul>
-          <ul class="reviews">
-            <li ng-repeat="review in barberInfos.reviews">
-              {{ review }}
-            </li>
-          </ul>
-          <ul class="styles">
-            <li ng-repeat="style in barberInfos.styles">
-              {{ style }}
-            </li>
-          </ul>
+        <div class="col-xs-12 col-sm-6 stats-block">
+          <div class="stats">
+            <p class="name">{{ barberInfos.name }}</p>
+            <p class="bio">{{ barberInfos.bio }}</p>
+            <p class="location"><span class="sub-title">Location:</span> {{ barberInfos.location }}</p>
+            <p class="availability"><span class="sub-title">Availability:</span> {{ barberInfos.availability }}</p>
+            <ul class="languages">
+              <span class="sub-title">Language:</span>
+              <li ng-repeat="language in barberInfos.languages">
+                {{ language }}
+              </li>
+            </ul>
 
-
-
-          
+          </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="row description-block description-barber">
-      <div class="description">
-        unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+  <form ng-submit="orderBarber(barber)">
+    <div class="row list-block">
+      <div class="col-xs-12 profile-list-container">
+
+        <h2>This barber's style</h2>
+        <ul class="styles">
+        <li class="col-xs-6 col-sm-3 style-select {{style}}" ng-repeat="style in barberInfos.styles" ng-click="styleSelection(style)">
+            <div class="style-block" style="background-image:url('https://s3-us-west-1.amazonaws.com/haircut-on-demand/{{style}}.png')">
+              <span>{{ style }}</span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <p class="style-require-error" ng-show="orderRequire">You must select a style</p>
+    </div>
+
+    <div class="row order-block">
+      <div class="col-xs-12 order-inner-block">
+        <div class="col-xs-12 button-container">
+          <button type="submit" class="btn ">Order {{ barberInfos.name }}</button>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <div class="row review-block">
+    <div class="col-xs-12 reviews">
+      <div class="col-xs-12 inner-block-reviews">
+        <h2>Customers review</h2>
+        <ul>
+          <li ng-repeat="review in barberInfos.reviews">
+            {{ review }}
+          </li>
+        </ul>
       </div>
     </div>
   </div>
-
-  <div class="col-md-4 gallery-container gallery-barber">
-    <div class="gallery">
-      Barber Gallery
-    </div>
-  </div>
-</div>
-
-<div class="row profile-list-container barber-styles-list">
-
-  <h2>THIS BARBER'S STYLES</h2>
-
-  <img src="http://lorempixel.com/g/300/300">
-  <img src="http://lorempixel.com/g/300/300">
-  <img src="http://lorempixel.com/g/300/300">
-  <img src="http://lorempixel.com/g/300/300">
-
-</div>
-
 </div>
