--- a/client/app/index.html
+++ b/client/app/index.html
@@ -48,7 +48,7 @@
                 </form>
               <div id="navbar" class="collapse navbar-collapse" >
                   <ul class="nav navbar-nav navbar-right" ng-controller='AuthController' style='float:right'>
-                          <li class='nav navbar-nav'>
+                          <li ng-controller="barberProfileController" class='nav navbar-nav'>
                               <a ng-click="checkOut()">Checkout
                              <span class="glyphicon glyphicon-shopping-cart"></span> {{count.number}}
                               </a>
