add: add new carousel images and fix carousel text

--- a/client/app/homepage/homepage.html
+++ b/client/app/homepage/homepage.html
@@ -14,34 +14,34 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="http://lorempixel.com/940/300" alt="test">
+        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel4.png" alt="test">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>See Why Our Users Love Us</h3>
+          <h4><p><q>Instacutz has been a lifesaver. I don't have to worry about booking a haircut in advance anymore!</q></p></h4>
         </div>
       </div>
 
       <div class="item">
-        <img src="http://lorempixel.com/940/300/food" alt="test">
+        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel2.png" alt="test">
         <div class="carousel-caption">
-          <h3>Chania</h3>
-          <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+          <h3>Top-Rated Barbers</h3>
+          <h4><p><q>Faisal is the most skilled and attentive stylist I've ever met</q></p></h4>
         </div>
       </div>
 
       <div class="item">
-        <img src="http://lorempixel.com/940/300/sports" alt="test">
+        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel3.png" alt="test">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Quick & Easy Payment</h3>
+          <h4><p>Pay in advance using your credit card using Stripe</p></h4>
         </div>
       </div>
 
       <div class="item">
-        <img src="http://lorempixel.com/940/300/animals" alt="test">
+        <img src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/carousel1.png" alt="test">
         <div class="carousel-caption">
-          <h3>Flowers</h3>
-          <p>Beatiful flowers in Kolymbari, Crete.</p>
+          <h3>Unparalleled Customer Service</h3>
+          <h4><p><q>Cyrus transforms my curly, out-of-control hair into an effortlessly natural style</q></p></h4>
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  
+
  <div class="barber-style-selection">
   <div class="selection-link selection-link-barber col-xs-12 col-sm-6">
     <a href="#/barbers" class="link barber-link">
