--- a/client/app/barbers/barber-list/barber-list.html
+++ b/client/app/barbers/barber-list/barber-list.html
@@ -7,17 +7,17 @@
       <div class="col-sm-4 col-lg-4 col -md-4 list-element-container">
         <div class="thumbnail list-element">
           <a href="#/barbers/profile" ng-click="setId(meal._id)" class="picture" style="background-image:url({{meal.portrait}})"></a>
-          <div class="caption">
-            <h4><a href="#/barbers/profile" ng-click="setId(meal._id)">{{meal.name}}</a></h4>
-            <button type="submit" class="btn btn-success pull-right" ng-click="orderMeal(meal)">Add to cart</button>
-            <p>{{meal.meals.description}}</p>
-
-          </div>
-          <div class="ratings">
-           <div class="container" ng-controller="ratingController">
-            Rating : {{meal.avgRating}}/5
-            <div star-rating rating="starRating1=meal.avgRating" read-only="true" max-rating="5">
+          <div class="barber-info cf">
+            <div class="caption">
+              <h4><a href="#/barbers/profile" ng-click="setId(meal._id)">{{meal.name}}</a></h4>
+              <!-- <p>{{meal.meals.description}}</p> -->
             </div>
+            <div class="ratings">
+              <div class="ratings-container" ng-controller="ratingController">
+                <!-- Rating : {{meal.avgRating}}/5 -->
+                <div class="ratings-inner-container" star-rating rating="starRating1=meal.avgRating" read-only="true" max-rating="5">
+                </div>
+              </div>
             </div>
           </div>
         </div>
