fix:changes made to the about-us page bios

--- a/client/app/about-us/about.html
+++ b/client/app/about-us/about.html
@@ -22,7 +22,8 @@
                 <h1 class="page-header">About Us
                     <small>Meet The Team!</small>
                 </h1>
-                <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? Instacutz brings the best barbers in town to you - on demand. </p></h4>
+                <h4><p>Ever wanted to get a fresh haircut, but all the best salons in town were closed, or booked? </p></h4>
+                <h4><p>Instacutz brings the best barbers in town to you - on demand. </p></h4>
                 <p>1. Simply click 'Barbers' to see the list of barbers available, select the style you want(or custom style!). </p>
                 <p>2. Pay for your haircut quickly and easily with your credit card</p>
                 <p>3. You're Done! Check Your Phone for Text Notification about your order, and feel free to contact your barber who will be on his way.</p>
@@ -58,9 +59,9 @@
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/renanprofile.png" alt="">
                 <h3>Renan Deswarte
-                    <small>BuzzCut Connoisseur</small>
+                    <small>Buzzcut Connoisseur</small>
                 </h3>
-                <p></p>
+                <p>The hair makes the man. Well, that and other things</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="https://s3-us-west-1.amazonaws.com/haircut-on-demand/kevinprofile.png" alt="">
