fix: shopping cart view to display right order information

--- a/client/app/order/order.html
+++ b/client/app/order/order.html
@@ -7,20 +7,21 @@
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>Barber</th>
                                 <th>Style</th>
+                                <th>Barber</th>
                             </tr>
                         </thead>
                         <tbody>
                             <!-- TODO: replace these with the selected barber and style -->
-                            <tr ng-repeat="order in orders.orders">
-                                <td> <img ng-src="{{order.url || 'http://images.realestateview.com.au/pics/406/Food-Hospitality-Elsternwick-VIC-3185-Real-Estate-photo-1-featured-9374406.jpg'}}" id="order_thumbnail" alt="image">
+                            <tr>
+                                <td> <img ng-src="{{requestStylePic}}" id="order_thumbnail" alt="image">
+                                {{requestStyle}}
                                 </td>
-                                <td id="title">{{order.title}}</td>
-                                <td>{{order.price | currency}}</td>
-                                <td>{{order.description}}</td>
+                                <td id="title">{{requestBarber}}</td>
+                                <td>${{requestPrice}}</td>
+                                <td>You requested {{requestStyle}} style with {{requestBarber}}!</td>
                                 <td>
-                                    <button class="btn btn-primary" type="button" ng-click="RemoveItem(orders.orders,$index)">remove item</button>
+                                    <button class="btn btn-primary" type="button" ng-click="RemoveItem(orders.orders,$index)">Remove Booking</button>
                                 </td>
                             </tr>
                             <tfoot>
@@ -95,6 +96,62 @@
                     <p style="color:red" ng-show="failedAttempt">Sorry, that username already exists. Please choose another, or sign in above.</p>
                 </form>
             </div>
+
+        <div ng-controller="AuthController">
+          <div id="signin">
+            <h1>Please sign in:</h1>
+            <form name="signinForm" ng-submit="signin()">
+              <input type="text" ng-model="user.username">
+              <input type="password" ng-model="user.password">
+              <button>signin</button>
+            </form>
+            <p style="color:red" ng-show="failedLogin">Wrong username or password</p>
+          </div>
+
+          <div class="signup">
+          <h1>Or sign up:</h1>
+          </div>
+
+          <!-- email input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="email" name="email" type="text" placeholder="name@example.com" class="input-xlarge">
+              </div>
+          </div>
+
+          <!-- address-line1 input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="address-line1" name="address-line1" type="text" placeholder="address line 1" class="input-xlarge" >
+              </div>
+          </div>
+          <!-- address-line2 input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="address-line2" name="address-line2" type="text" placeholder="address line 2" class="input-xlarge">
+              </div>
+          </div>
+          <!-- city input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="city" name="city" type="text" placeholder="city" class="input-xlarge" >
+                  <p class="help-block"></p>
+              </div>
+          </div>
+          <!-- region input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="region" name="region" type="text" placeholder="state / province / region" class="input-xlarge" >
+                  <p class="help-block"></p>
+              </div>
+          </div>
+          <!-- postal-code input-->
+          <div class="control-group">
+              <div class="controls">
+                  <input id="postal-code" name="postal-code" type="text" placeholder="zip or postal code" class="input-xlarge" >
+                  <p class="help-block"></p>
+              </div>
+          </div>
         </div>
         <!-- original Foodly checkout -->
         <!-- <form id="checkout" ng-click="submitOrder()">
