fix: make users have one order. if user requests new order, it overwrites previous one

--- a/client/app/order/order.html
+++ b/client/app/order/order.html
@@ -27,7 +27,7 @@
                             <tfoot>
                                 <td></td>
                                 <td><strong>Total:</strong></td>
-                                <td><strong id="total">{{getTotal() | currency}}</strong></td>
+                                <td><strong id="total">${{requestPrice}}</strong></td>
                                 <td id="cartContents" style="display: none">{{getCartContents()}}</strong>
                                 </td>
                                 <td></td>
