fix:change navigation menu to add barbers and styles

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -45,9 +45,9 @@
                   <a class="navbar-brand icon" href="#/">
                     <i class="icon-mustache"></i>
                   </a>
-                  <a class="navbar-brand" href="#/about">About Us</a>
-                  <a class="navbar-brand" href="#/meals">Barbers</a>
-<!--                           <a class ='navbar-brand' href="#/addmeal">Add Style</a> -->
+                  <a class="navbar-brand" href="#/about">About</a>
+                  <a class="navbar-brand" href="#/barbers">Barbers</a>
+                  <a class="navbar-brand" href="#/hairstyles">Styles</a>
 
               </div>
                 <form class="navbar-form navbar-left" role="search">
